# traffic_donkey

./: .gitignore  CMakeLists.txt  Car.cpp  Car.h  Plot.py  README.md  all_the_roads.cpp  bibliography.md  car.cpp  car.h  graph.cpp  graph.h  main.cpp  plot.cpp  road.cpp  road.h  traffic_model.h  traffic_on_one_road.cpp  Транспортная модель центра города в утренние часы.pptx  техзадание.md
